typescript/checker/tests/conformance/es6/for-ofStatements/for-of17.ts.stderr
error: ShouldIncludeUndefinedType {
    span: Span {
        lo: BytePos(
            204,
        ),
        hi: BytePos(
            205,
        ),
        ctxt: #0,
    },
}
  --> $DIR/tests/conformance/es6/for-ofStatements/for-of17.ts:14:5
   |
14 | var v: string;
   |     ^

